--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,14 +1,8 @@
 NAME = phonebook
-CFLAGS = -Wall -Wextra -Werror -std=c++98
-CC = c++
-RM = rm -rf
-FUN = main.cpp
-OBJ = $(FUN:%.o=%.c)
-
-all :$(NAME)
-
-$(NAME) : $(OBJ)
-	$(CC) $(CFLAGS) $(OBJ) -o $(NAME)
+FUN = main.cpp Contact.cpp PhoneBook.cpp
+all : $(NAME)
+$(NAME) : 
+	c++ -Wall -Wextra -Werror -std=c++98 $(FUN) -o $(NAME)
 clean :
-	$(RM) $(NAME)
+	rm -rf $(NAME)
 re : clean all
