--- a/CPP00/ex00/Makefile
+++ b/CPP00/ex00/Makefile
@@ -1,14 +1,24 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: bamssaye <bamssaye@student.42.fr>          +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2025/03/04 02:53:28 by bamssaye          #+#    #+#              #
+#    Updated: 2025/03/04 02:53:29 by bamssaye         ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
 NAME = megaphone
 CFLAGS = -Wall -Wextra -Werror -std=c++98
-CC = c++
-RM = rm -rf
+CXX = c++
 FUN = megaphone.cpp
 OBJ = $(FUN:%.o=%.c)
 
 all :$(NAME)
-
 $(NAME) : $(OBJ)
-	$(CC) $(CFLAGS) $(OBJ) -o $(NAME)
+	$(CXX) $(CFLAGS) $(OBJ) -o $(NAME)
 clean :
-	$(RM) $(NAME)
+	rm -rf $(NAME)
 re : clean all
