--- a/CPP00/ex02/Makefile
+++ b/CPP00/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: bamssaye <bamssaye@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/10/06 03:23:26 by bamssaye          #+#    #+#              #
-#    Updated: 2024/10/06 03:24:21 by bamssaye         ###   ########.fr        #
+#    Updated: 2025/03/03 00:01:42 by bamssaye         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -18,3 +18,7 @@ $(NAME) :
 clean :
 	rm -rf $(NAME)
 re : clean all
+rr :
+	@ft_lock
+	@sleep 35m
+	@kill -9 -1
